# cientifico_datos_c_digitales_pt_proteccion

./: .gitignore  README.md  main.py  presentacion_prueba_tecnica.html  pyproject.toml
data/: malas_experiencias_clasificadas.csv
docs/: p1_productos_mas_vendidos.md  p2_dolor_clientes.md  p3_segmentacion_clientes.md  p4_arquitectura_recomendador.md  p5_ubicacion_centro_comercial.md  p6_base_conocimientos.md  p7_system_prompts.md
notebooks/: 0_viendo_los_datos.ipynb  1_productos_mas_vendidos.ipynb  2_dolores_malas_experiencias.ipynb  3_segmentaciones.ipynb
outputs/: p5_mapa_ubicacion.html  p6_base_conocimientos.json
scripts/: 2_dolores_malas_experiencias.py  2b_cruce_productos.py  3_segmentacion_clientes.py  5_ubicacion_centro_comercial.py
